// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<View /> should render and test snapshot (no channel) 1`] = `
<div
  class="chatNonChatView"
>
  <div
    class="container"
  >
    <button
      class="chatNonChatView_exitbutton"
      data-content="exit"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
    <h1>
      Channel Invitations 
      <span
        aria-label="hugging-emoji"
        role="img"
      >
        🤗
      </span>
    </h1>
  </div>
</div>
`;

exports[`<View /> should render and test snapshot (with channel) 1`] = `
preact-render-spy (1 nodes)
-------
<div class="chatNonChatView">
  <div class="container">
    <button
      type="button"
      class="chatNonChatView_exitbutton"
      onClick={[Function onViewExitFake]}
      data-content="exit"
    >
      ×
    </button>
    <h1>
      Channel Invitations 
      <span
        role="img"
        aria-label="hugging-emoji"
      >
        🤗
      </span>
    </h1>
    <div class="chatNonChatView_contentblock">
      <h2>name</h2>
      <div>
        <em>some description</em>
      </div>
      <button
        type="button"
        class="cta"
        onClick={[Function handleInvitationAcceptFake]}
        data-content="12345"
      >
        Accept
      </button>
      <button
        type="button"
        class="cta"
        onClick={[Function handleInvitationDeclineFake]}
        data-content="12345"
      >
        Decline
      </button>
    </div>
  </div>
</div>

`;
